Prevent instance name from wrapping in page header

--- a/frontend/src/ui-components/stylesheets/ff-components.scss
+++ b/frontend/src/ui-components/stylesheets/ff-components.scss
@@ -44,6 +44,7 @@
     font-weight: bold;
     font-size: 1.25rem;
     line-height: 1.75rem;
+    white-space: nowrap;
     &:hover {
       text-decoration: underline;
     }
@@ -55,6 +56,7 @@
   font-weight: bold;
   font-size: 1.25rem;
   line-height: 1.75rem;
+  white-space: nowrap;
 }
 
 /*
